logs/dag_id=weather_dag_api/run_id=manual__2023-04-27T06:51:39.617091+00:00/task_id=cities.insert_data_Zhmerynka/attempt=1.log
[2023-04-27T06:52:18.632+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_dag_api.cities.insert_data_Zhmerynka manual__2023-04-27T06:51:39.617091+00:00 [queued]>
[2023-04-27T06:52:18.896+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_dag_api.cities.insert_data_Zhmerynka manual__2023-04-27T06:51:39.617091+00:00 [queued]>
[2023-04-27T06:52:18.899+0000] {taskinstance.py:1288} INFO - 
--------------------------------------------------------------------------------
[2023-04-27T06:52:18.902+0000] {taskinstance.py:1289} INFO - Starting attempt 1 of 1
[2023-04-27T06:52:18.916+0000] {taskinstance.py:1290} INFO - 
--------------------------------------------------------------------------------
[2023-04-27T06:52:19.096+0000] {taskinstance.py:1309} INFO - Executing <Task(PostgresOperator): cities.insert_data_Zhmerynka> on 2023-04-27 06:51:39.617091+00:00
[2023-04-27T06:52:19.120+0000] {standard_task_runner.py:55} INFO - Started process 319 to run task
[2023-04-27T06:52:19.358+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'weather_dag_api', 'cities.insert_data_Zhmerynka', 'manual__2023-04-27T06:51:39.617091+00:00', '--job-id', '43', '--raw', '--subdir', 'DAGS_FOLDER/weather_dag_api.py', '--cfg-path', '/tmp/tmpinddrm1r']
[2023-04-27T06:52:19.399+0000] {standard_task_runner.py:83} INFO - Job 43: Subtask cities.insert_data_Zhmerynka
[2023-04-27T06:52:20.488+0000] {task_command.py:389} INFO - Running <TaskInstance: weather_dag_api.cities.insert_data_Zhmerynka manual__2023-04-27T06:51:39.617091+00:00 [running]> on host 80d943d8f5b4
[2023-04-27T06:52:21.402+0000] {taskinstance.py:1518} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=weather_dag_api
AIRFLOW_CTX_TASK_ID=cities.insert_data_Zhmerynka
AIRFLOW_CTX_EXECUTION_DATE=2023-04-27T06:51:39.617091+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-04-27T06:51:39.617091+00:00
[2023-04-27T06:52:21.405+0000] {sql.py:254} INFO - Executing: INSERT INTO measurements (timestamp, temp, precipitation, wind_speed, location) 
				VALUES (2023-04-26T10:20:00Z,
				12.4,
				0.0,
				3.5,
				Zhmerynka);
[2023-04-27T06:52:21.470+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-27T06:52:30.623+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-27T06:52:30.637+0000] {sql.py:375} INFO - Running statement: INSERT INTO measurements (timestamp, temp, precipitation, wind_speed, location) 
				VALUES (2023-04-26T10:20:00Z,
				12.4,
				0.0,
				3.5,
				Zhmerynka);, parameters: None
[2023-04-27T06:52:30.646+0000] {taskinstance.py:1776} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "T10"
LINE 2:     VALUES (2023-04-26T10:20:00Z,
                              ^

[2023-04-27T06:52:30.750+0000] {taskinstance.py:1332} INFO - Marking task as FAILED. dag_id=weather_dag_api, task_id=cities.insert_data_Zhmerynka, execution_date=20230427T065139, start_date=20230427T065218, end_date=20230427T065230
[2023-04-27T06:52:31.360+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 43 for task cities.insert_data_Zhmerynka (syntax error at or near "T10"
LINE 2:     VALUES (2023-04-26T10:20:00Z,
                              ^
; 319)
[2023-04-27T06:52:32.132+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-04-27T06:52:32.523+0000] {taskinstance.py:2596} INFO - 0 downstream tasks scheduled from follow-on schedule check
